--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -44,6 +44,11 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest-dev .
           docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest-dev
 
+      # GET GitHub IP
+      - name: get GitHub IP 
+        id: ip
+        uses: haythem/public-ip@v1.2
+      
       # aws 세팅
       - name: aws 세팅
         uses: aws-actions/configure-aws-credentials@v1
