--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -39,7 +39,7 @@ jobs:
           DEV_SECRET_DIR: src/main/resources
           DEV_SECRET_TEST_DIR: src/test/resources
           DEV_SECRET_DIR_FILE_NAME: application-dev.yml
-        run: echo $DEV_SECRET | base64 --decode >> $DEV_SECRET_DIR/$DEV_SECRET_DIR_FILE_NAME
+        run: echo $DEV_SECRET | base64 --decode >> $DEV_SECRET_DIR/$DEV_SECRET_DIR_FILE_NAME &&
              echo $DEV_SECRET | base64 --decode >> $DEV_SECRET_TEST_DIR/$DEV_SECRET_DIR_FILE_NAME
           
       # ./gradlew 권한 설정
