--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// jwt
+	implementation 'com.auth0:java-jwt:4.2.1'
 	// Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	// Spring Web
