--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   redis:
-    container_name: snack-redis
+    container_name: redis
     hostname: redis
     image: redis
     ports:
