--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -112,7 +112,7 @@ jobs:
             cd mapdagu
             sudo docker-compose down
             sudo docker-compose pull
-            sudo docker image rm ${{ secrets.DOCKER_REPO }}
+            sudo docker image rm ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
             sudo docker-compose up -d
 
       # REMOVE Github IP FROM security group
