chore: Oauth2, Spring Security test 의존성 추가 (#4)

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 	// Spring Data Redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	// OAuth2 Client
-//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	// jwt
@@ -45,7 +45,7 @@ dependencies {
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
