fix: docker-compose redis 고정 ip 설정 (#6)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     ports:
       - 6379:6379
     networks:
-      - mapdagu_network
+      mapdagu_network:
+        - ipv4_address: 172.18.0.2
 
   springboot:
     container_name: spring-dev
@@ -25,3 +26,6 @@ services:
 networks:
   mapdagu_network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.18.0.0/16
