--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -112,8 +112,8 @@ jobs:
             cd mapdagu
             sudo docker-compose down
             sudo docker-compose pull
-            sudo docker image rm ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
             sudo docker-compose up -d
+            sudo docker image prune -f
 
       # REMOVE Github IP FROM security group
       - name: Remove IP FROM security group
